fix: Corrected workflow permissions for OIDC login

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,13 +16,14 @@ env:
   IMAGE_TAG: latest
   DEPLOYMENT_NAME: burgerbuilder-web-deployment
   
-permissions:
-  id-token: write # هذا ضروري لـ OIDC لطلب التوكن
-  contents: read
-
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
+    
+    permissions: 
+      id-token: write 
+      contents: read
+      secrets: inherit 
     
     steps:
       - name: 1. Checkout repository code
@@ -35,19 +36,18 @@ jobs:
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           enable-AzPSSession: true
-          # لا نحتاج client-secret هنا بفضل OIDC
 
       - name: 3. Build and Push Docker Image to ACR
         uses: azure/docker-login@v1
         with:
           login-server: ${{ env.ACR_NAME }}.azurecr.io
           username: ${{ secrets.AZURE_CLIENT_ID }}
-          password: ${{ secrets.AZURE_CLIENT_SECRET }} # يتم استخدام أي قيمة هنا أو يمكن استخدام OIDC للمصادقة
+          password: ${{ secrets.AZURE_CLIENT_SECRET }} 
 
       - run: |
           docker build -t ${{ env.ACR_NAME }}.azurecr.io/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} .
           docker push ${{ env.ACR_NAME }}.azurecr.io/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
-        working-directory: ./src # **تأكد من أن هذا المسار هو مسار Dockerfile في مستودعك**
+        working-directory: ./src # **تأكد من أن هذا المسار هو مسار Dockerfile**
       
       - name: 4. Set up Kubeconfig for AKS
         uses: azure/aks-set-context@v3
@@ -65,5 +65,3 @@ jobs:
             ${{ env.ACR_NAME }}.azurecr.io/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
           imagepullsecrets: |
             ${{ env.ACR_NAME }}-secret
-
-# عند الانتهاء من اللصق، قومي بإضافة ملفات deployment.yaml و service.yaml في الخطوة التالية.
