--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,14 +16,16 @@ env:
   IMAGE_TAG: latest
   DEPLOYMENT_NAME: burgerbuilder-web-deployment
   
+permissions: # 👈 🔑 تمت إضافة إذن ID-TOKEN في الجذر
+  id-token: write
+  contents: read 
+
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     
-    permissions: 
-      id-token: write 
-      contents: read
-      secrets: inherit 
+    # تمت إزالة قسم الأذونات من هنا لضمان استخدام الأذونات الجذرية التي تعمل بشكل موثوق
+    # مع مكون azure/login@v1
     
     steps:
       - name: 1. Checkout repository code
